--- a/src/app/pages/appointment-creation/appointment-creation.component.html
+++ b/src/app/pages/appointment-creation/appointment-creation.component.html
@@ -38,5 +38,11 @@
   <div class="ui-g-12 container">
     <p-button label="{{buttonString}}" (onClick)="handleClick($event)"></p-button>
   </div>
+  <div class="ui-g-12 container">
+    <p-button label="Auth" (onClick)="handleAuthClick($event)"></p-button>
+  </div>
+  <div class="ui-g-12 container">
+    <p-button label="Token" (onClick)="handleTokenClick($event)"></p-button>
+  </div>
 </div>
 <p-toast></p-toast>
