Added additional debug

--- a/src/app/pages/appointment-creation/appointment-creation.component.html
+++ b/src/app/pages/appointment-creation/appointment-creation.component.html
@@ -44,5 +44,8 @@
   <div class="ui-g-12 container">
     <p-button label="Token" (onClick)="handleTokenClick($event)"></p-button>
   </div>
+  <div class="ui-g-12 container">
+    <p-button label="Token ref" (onClick)="handleTokenRefreshClick($event)"></p-button>
+  </div>
 </div>
 <p-toast></p-toast>
