Added debug button

--- a/src/app/pages/appointment-creation/appointment-creation.component.html
+++ b/src/app/pages/appointment-creation/appointment-creation.component.html
@@ -37,6 +37,7 @@
   </div>
   <div class="ui-g-12 container">
     <p-button label="{{buttonString}}" (onClick)="handleClick($event)"></p-button>
+    <p-button label="Break tokens!" (onClick)="breakTokensCLick($event)"></p-button>
   </div>
 </div>
 <p-toast></p-toast>
